// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dotcom Shell Default 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="storybook-readme-story"
    >
      <div
        style={Object {}}
      >
        <div>
          <div
            className="bx--masthead "
          >
            <div
              className="bx--masthead__l0"
            >
              <header
                aria-label="IBM"
                className="bx--header"
                data-autoid="dds--masthead"
                role="banner"
              >
                <a
                  className="bx--skip-to-content"
                  href="#main-content"
                  tabIndex="0"
                >
                  Skip to main content
                </a>
                <button
                  aria-label="Open menu"
                  className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
                  data-autoid="dds--masthead__hamburger"
                  onClick={[Function]}
                  title="Open menu"
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 20 20"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 14.8h16V16H2zm0-3.6h16v1.2H2zm0-3.6h16v1.2H2zM2 4h16v1.2H2z"
                    />
                  </svg>
                </button>
                <div
                  className="bx--header__logo"
                  data-autoid="dds--masthead-logo"
                >
                  <a
                    data-autoid="dds--masthead-logo__link"
                    href="https://www.ibm.com/"
                  >
                    <svg
                      height={23}
                      width={54}
                    >
                      <path
                        d="M0 22.082v-1.386h10.471v1.386H0zm0-2.909v-1.385h10.471v1.385H0zm2.992-2.908v-1.386h4.487v1.386H2.992zm0-2.91v-1.384h4.487v1.385H2.992zm0-2.908V9.062h4.487v1.385H2.992zm0-2.908V6.153h4.487V7.54H2.992zM0 4.629V3.245h10.471V4.63H0zm0-2.908V.336h10.471v1.385H0zm11.967 16.067h16.527c-.13.49-.322.955-.566 1.385h-15.96v-1.385zm2.992-1.523v-1.386h4.488v1.386h-4.488zM26.78 11.97c.432.402.803.868 1.098 1.386h-12.92V11.97H26.78zM14.96 9.062h12.968a5.836 5.836 0 01-1.097 1.385H14.959V9.062zM28.494 4.63H11.967V3.244h15.96c.245.43.437.895.567 1.386zM26.68 1.72H11.967V.336h11.015c1.41 0 2.701.522 3.698 1.385zM14.959 7.538V6.153h4.488v1.385h-4.488zm8.703 0V6.154h5.032c0 .478-.06.941-.167 1.386h-4.865zm0 7.341h4.865c.107.445.167.908.167 1.386h-5.032v-1.386zM38.35.33l.472 1.385h-8.904V.328h8.432zm-8.431 21.753v-1.386h7.481v1.386h-7.481zm0-2.91v-1.386h7.481v1.386h-7.481zm2.992-2.91v-1.385h4.49v1.385h-4.49zm0-2.91v-1.385h4.49v1.386h-4.49zm13.468 8.73v-1.386h7.482v1.386h-7.482zm0-2.91v-1.386h7.482v1.386h-7.482zm0-2.91v-1.385h4.49v1.385h-4.49zm0-2.91v-1.385h4.49v1.386h-4.49zm0-2.909v-1.32l-.458 1.32h-3.94l.473-1.386h8.415v1.386h-4.49zm-5.053-1.385l.472 1.385h-3.94l-.458-1.32v1.32H32.91V9.058h8.415zm9.542-2.91v1.385h-7.895l.471-1.385h7.424zM45.426.328h8.434v1.386h-8.906L45.426.33zm-3.54 21.754l-.475-1.386h.956l-.481 1.386zm-1.003-2.91l-.48-1.386h2.972l-.48 1.386h-2.012zm-1.009-2.91l-.48-1.385h4.99l-.48 1.385h-4.03zm-1.008-2.91l-.48-1.385h7.006l-.48 1.386h-6.046zM32.91 7.534V6.148h7.424l.472 1.385H32.91zm11.053-2.91l.472-1.385h9.425v1.386h-9.897zm-4.62-1.385l.472 1.386h-9.898V3.238h9.426zM11.967 20.696H26.68a5.627 5.627 0 01-3.698 1.386H11.967v-1.386z"
                        fill="#000"
                        fillRule="evenodd"
                      />
                    </svg>
                  </a>
                </div>
                <div
                  className="bx--header__search "
                >
                  <nav
                    aria-label="IBM"
                    className="bx--header__nav"
                    data-autoid="dds--masthead__l0-nav"
                  >
                    <ul
                      aria-label="IBM"
                      className="bx--header__menu-bar"
                      role="menubar"
                    />
                  </nav>
                  <div
                    className="bx--masthead__search"
                    data-autoid="dds--masthead__search"
                    onBlur={[Function]}
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-owns="react-autowhatever-1"
                      className="react-autosuggest__container"
                      role="combobox"
                    >
                      <input
                        aria-activedescendant={null}
                        aria-autocomplete="list"
                        aria-controls="react-autowhatever-1"
                        autoComplete="off"
                        className="bx--header__search--input"
                        data-autoid="dds--header__search--input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Search all of IBM"
                        type="text"
                        value=""
                      />
                      <button
                        aria-label="Search all of IBM"
                        className="bx--header__search--search bx--header__action"
                        data-autoid="dds--header__search--search"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          focusable="false"
                          height={20}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 32 32"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M30 28.59L22.45 21A11 11 0 1 0 21 22.45L28.59 30zM5 14a9 9 0 1 1 9 9 9 9 0 0 1-9-9z"
                          />
                        </svg>
                      </button>
                      <button
                        aria-label="Close"
                        className="bx--header__search--close bx--header__action"
                        data-autoid="dds--header__search--close"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          focusable="false"
                          height={20}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 32 32"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                          />
                        </svg>
                      </button>
                      <div
                        className="react-autosuggest__suggestions-container"
                        id="react-autowhatever-1"
                        role="listbox"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="bx--header__global"
                >
                  <button
                    aria-label="User Profile"
                    className="bx--header__action"
                    data-autoid="dds--masthead__profile"
                    onClick={[Function]}
                    type="button"
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-label="Menu"
                      className="bx--overflow-menu"
                      onClick={[Function]}
                      onClose={[Function]}
                      onKeyDown={[Function]}
                      open={false}
                      role="button"
                      style={
                        Object {
                          "width": "auto",
                        }
                      }
                      tabIndex={0}
                    >
                      <svg
                        aria-hidden={true}
                        focusable="false"
                        height={20}
                        preserveAspectRatio="xMidYMid meet"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 32 32"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 4a5 5 0 1 1-5 5 5 5 0 0 1 5-5m0-2a7 7 0 1 0 7 7 7 7 0 0 0-7-7zm10 28h-2v-5a5 5 0 0 0-5-5h-6a5 5 0 0 0-5 5v5H6v-5a7 7 0 0 1 7-7h6a7 7 0 0 1 7 7z"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
                <div
                  className="bx--side-nav__overlay"
                />
                <nav
                  aria-label="Side navigation"
                  className="bx--side-nav__navigation bx--side-nav bx--side-nav--ux bx--side-nav--hidden"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <nav
                    data-autoid="dds--masthead__l0-sidenav"
                  >
                    <ul
                      className="bx--side-nav__items"
                    >
                      <div
                        className="bx--side-nav__header-navigation"
                      />
                    </ul>
                  </nav>
                </nav>
              </header>
            </div>
            <div>
              <div
                className="bx--masthead__l1"
              >
                <div
                  className="bx--masthead__l1-name"
                >
                  <span
                    className="bx--masthead__l1-name-eyebrow"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.7 12.3L2.9 8.5H15v-1H2.9l3.8-3.8L6 3 1 8l5 5z"
                      />
                    </svg>
                    <a
                      href="#"
                    >
                      Eyebrow
                    </a>
                  </span>
                  <span
                    className="bx--masthead__l1-name-title"
                  >
                    Stock Charts
                  </span>
                </div>
                <nav
                  aria-label=""
                  className="bx--header__nav bx--masthead__l1-nav"
                >
                  <ul
                    aria-label=""
                    className="bx--header__menu-bar"
                    role="menubar"
                  >
                    <li>
                      <a
                        className="bx--header__menu-item"
                        href="#"
                        role="menuitem"
                        tabIndex={0}
                      >
                        <span
                          className="bx--text-truncate--end"
                        >
                          Link 1
                        </span>
                      </a>
                    </li>
                    <li>
                      <a
                        className="bx--header__menu-item"
                        href="#"
                        role="menuitem"
                        tabIndex={0}
                      >
                        <span
                          className="bx--text-truncate--end"
                        >
                          Link 2
                        </span>
                      </a>
                    </li>
                    <li>
                      <a
                        className="bx--header__menu-item"
                        href="#"
                        role="menuitem"
                        tabIndex={0}
                      >
                        <span
                          className="bx--text-truncate--end"
                        >
                          Link 3
                        </span>
                      </a>
                    </li>
                    <li
                      className="bx--header__submenu"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-expanded={false}
                        aria-haspopup="menu"
                        aria-label="Link 4"
                        className="bx--header__menu-item bx--header__menu-title"
                        href="javascript:void(0)"
                        onKeyDown={[Function]}
                        role="menuitem"
                        tabIndex={0}
                      >
                        Link 4
                        <svg
                          aria-hidden={true}
                          className="bx--header__menu-arrow"
                          focusable="false"
                          height={6}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 10 6"
                          width={10}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5 6L0 1 .7.3 5 4.6 9.3.3l.7.7z"
                          />
                        </svg>
                      </a>
                      <ul
                        aria-label="Link 4"
                        className="bx--header__menu"
                        role="menu"
                      >
                        <li
                          role="none"
                        >
                          <a
                            className="bx--header__menu-item"
                            href="#"
                            role="menuitem"
                            tabIndex={0}
                          >
                            <span
                              className="bx--text-truncate--end"
                            >
                              Sub-link 1
                            </span>
                          </a>
                        </li>
                        <li
                          role="none"
                        >
                          <a
                            className="bx--header__menu-item"
                            href="#"
                            role="menuitem"
                            tabIndex={0}
                          >
                            <span
                              className="bx--text-truncate--end"
                            >
                              Sub-link 2
                            </span>
                          </a>
                        </li>
                        <li
                          role="none"
                        >
                          <a
                            className="bx--header__menu-item"
                            href="#"
                            role="menuitem"
                            tabIndex={0}
                          >
                            <span
                              className="bx--text-truncate--end"
                            >
                              Sub-link 3
                            </span>
                          </a>
                        </li>
                      </ul>
                    </li>
                  </ul>
                </nav>
              </div>
            </div>
          </div>
          <div
            className="bx--dotcom-shell"
            data-autoid="dds--dotcom-shell"
          >
            <div
              className="bx--dotcom-shell__content"
              data-autoid="dds--dotcom-shell__content"
            >
              <div
                className="bx--grid"
              >
                <div
                  className="bx--row"
                >
                  <div
                    className="bx--col-lg-8"
                  >
                    <h1>
                      Some random content
                    </h1>
                    <p
                      style={
                        Object {
                          "paddingBottom": "1rem",
                        }
                      }
                    >
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                    </p>
                  </div>
                </div>
                <div
                  className="bx--row"
                >
                  <div
                    className="bx--col-lg-10"
                    style={
                      Object {
                        "paddingTop": "4rem",
                      }
                    }
                  >
                    <h1>
                      Carbon structured list
                    </h1>
                    <section
                      aria-label="Structured list section"
                      className="bx--structured-list"
                    >
                      <div
                        className="bx--structured-list-thead"
                      >
                        <div
                          className="bx--structured-list-row bx--structured-list-row--header-row"
                        >
                          <div
                            className="bx--structured-list-th"
                          >
                            ColumnA
                          </div>
                          <div
                            className="bx--structured-list-th"
                          >
                            ColumnB
                          </div>
                          <div
                            className="bx--structured-list-th"
                          >
                            ColumnC
                          </div>
                        </div>
                      </div>
                      <div
                        className="bx--structured-list-tbody"
                        onKeyDown={[Function]}
                      >
                        <div
                          className="bx--structured-list-row"
                        >
                          <div
                            className="bx--structured-list-td bx--structured-list-content--nowrap"
                          >
                            Row 1
                          </div>
                          <div
                            className="bx--structured-list-td"
                          >
                            Row 1
                          </div>
                          <div
                            className="bx--structured-list-td"
                          >
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed, aliquet bibendum augue. Aenean posuere sem vel euismod dignissim. Nulla ut cursus dolor. Pellentesque vulputate nisl a porttitor interdum.
                          </div>
                        </div>
                        <div
                          className="bx--structured-list-row"
                        >
                          <div
                            className="bx--structured-list-td bx--structured-list-content--nowrap"
                          >
                            Row 2
                          </div>
                          <div
                            className="bx--structured-list-td"
                          >
                            Row 2
                          </div>
                          <div
                            className="bx--structured-list-td"
                          >
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed, aliquet bibendum augue. Aenean posuere sem vel euismod dignissim. Nulla ut cursus dolor. Pellentesque vulputate nisl a porttitor interdum.
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <div
                  className="bx--row"
                >
                  <div
                    className="bx--col-lg-5"
                    style={
                      Object {
                        "paddingTop": "0rem",
                      }
                    }
                  >
                    <h1>
                      Some info about this data table
                    </h1>
                    <p
                      style={
                        Object {
                          "paddingBottom": "2rem",
                        }
                      }
                    >
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    </p>
                  </div>
                  <div
                    className="bx--col-lg-7"
                    style={
                      Object {
                        "paddingTop": "0rem",
                      }
                    }
                  >
                    <table
                      className="bx--skeleton bx--data-table"
                    >
                      <thead>
                        <tr>
                          <th>
                            Name
                          </th>
                          <th>
                            Protocol
                          </th>
                          <th>
                            Port
                          </th>
                          <th>
                            Rule
                          </th>
                          <th>
                            Attached Groups
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td>
                            <span />
                          </td>
                          <td>
                            <span />
                          </td>
                          <td>
                            <span />
                          </td>
                          <td>
                            <span />
                          </td>
                          <td>
                            <span />
                          </td>
                        </tr>
                        <tr>
                          <td />
                          <td />
                          <td />
                          <td />
                          <td />
                        </tr>
                        <tr>
                          <td />
                          <td />
                          <td />
                          <td />
                          <td />
                        </tr>
                        <tr>
                          <td />
                          <td />
                          <td />
                          <td />
                          <td />
                        </tr>
                        <tr>
                          <td />
                          <td />
                          <td />
                          <td />
                          <td />
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  className="bx--row"
                  style={
                    Object {
                      "backgroundColor": "#f3f3f3",
                      "marginTop": "5rem",
                      "paddingBottom": "2rem",
                      "paddingRight": "2rem",
                      "paddingTop": "2rem",
                    }
                  }
                >
                  <div
                    className="bx--col-md-2"
                    style={
                      Object {
                        "paddingBottom": "2rem",
                        "paddingTop": "2rem",
                      }
                    }
                  >
                    <h5>
                      Content card
                    </h5>
                    <p
                      style={
                        Object {
                          "paddingBottom": "2rem",
                          "paddingTop": "2rem",
                        }
                      }
                    >
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    </p>
                  </div>
                  <div
                    className="bx--col-md-2"
                    style={
                      Object {
                        "paddingBottom": "2rem",
                        "paddingTop": "2rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": "#fff",
                          "padding": "2rem",
                        }
                      }
                    >
                      <h5>
                        Content card
                      </h5>
                      <p
                        style={
                          Object {
                            "paddingBottom": "2rem",
                            "paddingTop": "2rem",
                          }
                        }
                      >
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                      </p>
                      <p
                        style={
                          Object {
                            "paddingBottom": "2rem",
                          }
                        }
                      >
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                      </p>
                      <button
                        className="bx--btn bx--btn--primary"
                        disabled={false}
                        tabIndex={0}
                        type="button"
                      >
                        Click me
                      </button>
                    </div>
                  </div>
                  <div
                    className="bx--col-md-2"
                    style={
                      Object {
                        "paddingBottom": "2rem",
                        "paddingTop": "2rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": "#fff",
                          "padding": "2rem",
                        }
                      }
                    >
                      <h5>
                        Content card
                      </h5>
                      <p
                        style={
                          Object {
                            "paddingBottom": "2rem",
                            "paddingTop": "2rem",
                          }
                        }
                      >
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                      </p>
                      <p
                        style={
                          Object {
                            "paddingBottom": "2rem",
                          }
                        }
                      >
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                      </p>
                      <button
                        className="bx--btn bx--btn--primary"
                        disabled={false}
                        tabIndex={0}
                        type="button"
                      >
                        Click me
                      </button>
                    </div>
                  </div>
                  <div
                    className="bx--col-md-2"
                    style={
                      Object {
                        "paddingBottom": "2rem",
                        "paddingTop": "2rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": "#fff",
                          "padding": "2rem",
                        }
                      }
                    >
                      <h5>
                        Content card
                      </h5>
                      <p
                        style={
                          Object {
                            "paddingBottom": "2rem",
                            "paddingTop": "2rem",
                          }
                        }
                      >
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                      </p>
                      <p
                        style={
                          Object {
                            "paddingBottom": "2rem",
                          }
                        }
                      >
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                      </p>
                      <button
                        className="bx--btn bx--btn--primary"
                        disabled={false}
                        tabIndex={0}
                        type="button"
                      >
                        Click me
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            className="bx--footer"
            data-autoid="dds--footer"
          >
            <section
              className="bx--footer__main"
            >
              <div
                className="bx--footer__main-container"
              >
                <div
                  className="bx--footer-logo"
                  data-autoid="dds--footer-logo"
                >
                  <a
                    className="bx--footer-logo__link"
                    data-autoid="dds--footer-logo__link"
                    href="https://www.ibm.com/"
                  >
                    <svg
                      aria-labelledby="footer-logo"
                      className="bx--footer-logo__logo"
                      role="img"
                      viewBox="0 0 157 65"
                    >
                      <title
                        id="footer-logo"
                      >
                        IBM Logo
                      </title>
                      <path
                        d="M30.4436498,60.2076728 L30.4436498,64.2376746 L-2.91322522e-13,64.2376746 L-2.91322522e-13,60.2076728 L30.4436498,60.2076728 Z M108.735358,60.2067171 L108.735358,64.2376746 L86.9826603,64.2376746 L86.9826603,60.2067171 L108.735358,60.2067171 Z M156.592795,60.2067171 L156.592795,64.2376746 L134.840096,64.2376746 L134.840096,60.2067171 L156.592795,60.2067171 Z M123.176704,60.2067171 L121.779475,64.2376746 L120.398188,60.2067171 L123.176704,60.2067171 Z M34.7933454,60.2078639 L77.5682441,60.2078639 C74.7705526,62.6327259 71.1773563,64.1319583 67.2410591,64.2324704 L66.8180207,64.2378657 L34.7933454,64.2378657 L34.7933454,60.2078639 L77.5682441,60.2078639 Z M30.4436498,51.7462936 L30.4436498,55.7762954 L-2.91322522e-13,55.7762954 L-2.91322522e-13,51.7462936 L30.4436498,51.7462936 Z M82.8448933,51.7469625 C82.5134031,52.9954078 82.0440654,54.1860508 81.4563549,55.3022459 L81.1972884,55.7760087 L34.7933454,55.7760087 L34.7933454,51.7469625 L82.8448933,51.7469625 Z M156.592795,51.742471 L156.592795,55.7734284 L134.840096,55.7734284 L134.840096,51.742471 L156.592795,51.742471 Z M108.735358,51.742471 L108.735358,55.7734284 L86.9826603,55.7734284 L86.9826603,51.742471 L108.735358,51.742471 Z M126.109666,51.7420887 L124.712437,55.7730462 L118.86283,55.7730462 L117.466539,51.7420887 L126.109666,51.7420887 Z M21.7451962,43.2849144 L21.7451962,47.3149162 L8.69751584,47.3149162 L8.69751584,43.2849144 L21.7451962,43.2849144 Z M82.940355,43.2851055 C83.2119472,44.4164829 83.378718,45.588834 83.4161671,46.7957568 L83.4242276,47.3151073 L68.7955217,47.3151073 L68.7955217,43.2851055 L82.940355,43.2851055 Z M56.5390105,43.2849144 L56.5390105,47.3149162 L43.4913301,47.3149162 L43.4913301,43.2849144 L56.5390105,43.2849144 Z M129.041034,43.2784159 L127.644742,47.3084177 L115.930525,47.3084177 L114.534234,43.2784159 L129.041034,43.2784159 Z M147.891528,43.2782248 L147.891528,47.3082266 L134.840096,47.3082266 L134.840096,43.2782248 L147.891528,43.2782248 Z M108.735358,43.2782248 L108.735358,47.3082266 L95.6839271,47.3082266 L95.6839271,43.2782248 L108.735358,43.2782248 Z M21.7451962,34.8235352 L21.7451962,38.853537 L8.69751584,38.853537 L8.69751584,34.8235352 L21.7451962,34.8235352 Z M77.8615684,34.8232485 C78.9907919,35.873419 79.9779764,37.0776317 80.7882576,38.4059297 L81.0517515,38.8532503 L43.4916115,38.8532503 L43.4916115,34.8232485 L77.8615684,34.8232485 Z M108.735358,34.8139786 L108.735358,38.8449361 L95.6839271,38.8449361 L95.6839271,34.8139786 L108.735358,34.8139786 Z M147.891528,34.8139786 L147.891528,38.8449361 L134.840096,38.8449361 L134.840096,34.8139786 L147.891528,34.8139786 Z M131.973433,34.8136919 L130.577142,38.8446494 L112.998313,38.8446494 L111.602022,34.8136919 L131.973433,34.8136919 Z M81.1948503,26.3623471 C80.4234674,27.7178498 79.472067,28.9518216 78.3755133,30.0356991 L78.0046671,30.3913933 L43.4912364,30.3913933 L43.4912364,26.3623471 L81.1948503,26.3623471 Z M21.7451962,26.362156 L21.7451962,30.3912022 L8.69751584,30.3912022 L8.69751584,26.362156 L21.7451962,26.362156 Z M147.891528,26.3490635 L147.891528,30.380021 L134.840096,30.380021 L134.839345,26.5412738 L133.509447,30.380021 L122.054045,30.380021 L123.426893,26.3490635 L147.891528,26.3490635 Z M120.148562,26.3492547 L121.52141,30.3802121 L110.06507,30.3802121 L108.735358,26.5413415 L108.735358,30.3802121 L95.6839271,30.3802121 L95.6839271,26.3492547 L120.148562,26.3492547 Z M21.7451962,17.9007768 L21.7451962,21.9307786 L8.69751584,21.9307786 L8.69751584,17.9007768 L21.7451962,17.9007768 Z M83.4242276,17.900299 C83.4242276,19.1161325 83.2914058,20.2997723 83.0502626,21.4428957 L82.940355,21.9303008 L68.7955217,21.9303008 L68.7955217,17.900299 L83.4242276,17.900299 Z M56.5390105,17.8998212 L56.5390105,21.929823 L43.4913301,21.929823 L43.4913301,17.8998212 L56.5390105,17.8998212 Z M147.891434,17.8846262 L147.891434,21.9155837 L124.936556,21.9155837 L126.307529,17.8846262 L147.891434,17.8846262 Z M117.266988,17.8844351 L118.638898,21.9153926 L95.6840208,21.9153926 L95.6840208,17.8844351 L117.266988,17.8844351 Z M30.4436498,9.43844199 L30.4436498,13.4684438 L-2.91322522e-13,13.4684438 L-2.91322522e-13,9.43844199 L30.4436498,9.43844199 Z M81.197476,9.43844199 C81.8186099,10.5338628 82.324153,11.7053777 82.6946307,12.9369814 L82.8450809,13.4684438 L34.793533,13.4684438 L34.793533,9.43844199 L81.197476,9.43844199 Z M156.593451,9.41971113 L156.593451,13.4506686 L127.817099,13.4506686 L129.189946,9.41971113 L156.593451,9.41971113 Z M114.385696,9.41999783 L115.757606,13.4509553 L86.9821914,13.4509553 L86.9821914,9.41999783 L114.385696,9.41999783 Z M30.4436498,0.978018462 L30.4436498,5.00706462 L-2.91322522e-13,5.00706462 L-2.91322522e-13,0.978018462 L30.4436498,0.978018462 Z M66.818302,0.977540633 C70.7785294,0.977540633 74.4118131,2.3931571 77.2657493,4.75043913 L77.5685254,5.00658679 L34.7936268,5.00658679 L34.7936268,0.977540633 L66.818302,0.977540633 Z M156.592607,0.956229502 L156.592607,4.98718697 L130.69886,4.98718697 L132.07077,0.956229502 L156.592607,0.956229502 Z M111.495495,0.955273846 L112.867405,4.98527566 L86.9820976,4.98527566 L86.9820976,0.955273846 L111.495495,0.955273846 Z"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </section>
          </footer>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots Footer Default 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="storybook-readme-story"
    >
      <div
        style={Object {}}
      >
        <div>
          <footer
            className="bx--footer"
            data-autoid="dds--footer"
          >
            <section
              className="bx--footer__main"
            >
              <div
                className="bx--footer__main-container"
              >
                <div
                  className="bx--footer-logo"
                  data-autoid="dds--footer-logo"
                >
                  <a
                    className="bx--footer-logo__link"
                    data-autoid="dds--footer-logo__link"
                    href="https://www.ibm.com/"
                  >
                    <svg
                      aria-labelledby="footer-logo"
                      className="bx--footer-logo__logo"
                      role="img"
                      viewBox="0 0 157 65"
                    >
                      <title
                        id="footer-logo"
                      >
                        IBM Logo
                      </title>
                      <path
                        d="M30.4436498,60.2076728 L30.4436498,64.2376746 L-2.91322522e-13,64.2376746 L-2.91322522e-13,60.2076728 L30.4436498,60.2076728 Z M108.735358,60.2067171 L108.735358,64.2376746 L86.9826603,64.2376746 L86.9826603,60.2067171 L108.735358,60.2067171 Z M156.592795,60.2067171 L156.592795,64.2376746 L134.840096,64.2376746 L134.840096,60.2067171 L156.592795,60.2067171 Z M123.176704,60.2067171 L121.779475,64.2376746 L120.398188,60.2067171 L123.176704,60.2067171 Z M34.7933454,60.2078639 L77.5682441,60.2078639 C74.7705526,62.6327259 71.1773563,64.1319583 67.2410591,64.2324704 L66.8180207,64.2378657 L34.7933454,64.2378657 L34.7933454,60.2078639 L77.5682441,60.2078639 Z M30.4436498,51.7462936 L30.4436498,55.7762954 L-2.91322522e-13,55.7762954 L-2.91322522e-13,51.7462936 L30.4436498,51.7462936 Z M82.8448933,51.7469625 C82.5134031,52.9954078 82.0440654,54.1860508 81.4563549,55.3022459 L81.1972884,55.7760087 L34.7933454,55.7760087 L34.7933454,51.7469625 L82.8448933,51.7469625 Z M156.592795,51.742471 L156.592795,55.7734284 L134.840096,55.7734284 L134.840096,51.742471 L156.592795,51.742471 Z M108.735358,51.742471 L108.735358,55.7734284 L86.9826603,55.7734284 L86.9826603,51.742471 L108.735358,51.742471 Z M126.109666,51.7420887 L124.712437,55.7730462 L118.86283,55.7730462 L117.466539,51.7420887 L126.109666,51.7420887 Z M21.7451962,43.2849144 L21.7451962,47.3149162 L8.69751584,47.3149162 L8.69751584,43.2849144 L21.7451962,43.2849144 Z M82.940355,43.2851055 C83.2119472,44.4164829 83.378718,45.588834 83.4161671,46.7957568 L83.4242276,47.3151073 L68.7955217,47.3151073 L68.7955217,43.2851055 L82.940355,43.2851055 Z M56.5390105,43.2849144 L56.5390105,47.3149162 L43.4913301,47.3149162 L43.4913301,43.2849144 L56.5390105,43.2849144 Z M129.041034,43.2784159 L127.644742,47.3084177 L115.930525,47.3084177 L114.534234,43.2784159 L129.041034,43.2784159 Z M147.891528,43.2782248 L147.891528,47.3082266 L134.840096,47.3082266 L134.840096,43.2782248 L147.891528,43.2782248 Z M108.735358,43.2782248 L108.735358,47.3082266 L95.6839271,47.3082266 L95.6839271,43.2782248 L108.735358,43.2782248 Z M21.7451962,34.8235352 L21.7451962,38.853537 L8.69751584,38.853537 L8.69751584,34.8235352 L21.7451962,34.8235352 Z M77.8615684,34.8232485 C78.9907919,35.873419 79.9779764,37.0776317 80.7882576,38.4059297 L81.0517515,38.8532503 L43.4916115,38.8532503 L43.4916115,34.8232485 L77.8615684,34.8232485 Z M108.735358,34.8139786 L108.735358,38.8449361 L95.6839271,38.8449361 L95.6839271,34.8139786 L108.735358,34.8139786 Z M147.891528,34.8139786 L147.891528,38.8449361 L134.840096,38.8449361 L134.840096,34.8139786 L147.891528,34.8139786 Z M131.973433,34.8136919 L130.577142,38.8446494 L112.998313,38.8446494 L111.602022,34.8136919 L131.973433,34.8136919 Z M81.1948503,26.3623471 C80.4234674,27.7178498 79.472067,28.9518216 78.3755133,30.0356991 L78.0046671,30.3913933 L43.4912364,30.3913933 L43.4912364,26.3623471 L81.1948503,26.3623471 Z M21.7451962,26.362156 L21.7451962,30.3912022 L8.69751584,30.3912022 L8.69751584,26.362156 L21.7451962,26.362156 Z M147.891528,26.3490635 L147.891528,30.380021 L134.840096,30.380021 L134.839345,26.5412738 L133.509447,30.380021 L122.054045,30.380021 L123.426893,26.3490635 L147.891528,26.3490635 Z M120.148562,26.3492547 L121.52141,30.3802121 L110.06507,30.3802121 L108.735358,26.5413415 L108.735358,30.3802121 L95.6839271,30.3802121 L95.6839271,26.3492547 L120.148562,26.3492547 Z M21.7451962,17.9007768 L21.7451962,21.9307786 L8.69751584,21.9307786 L8.69751584,17.9007768 L21.7451962,17.9007768 Z M83.4242276,17.900299 C83.4242276,19.1161325 83.2914058,20.2997723 83.0502626,21.4428957 L82.940355,21.9303008 L68.7955217,21.9303008 L68.7955217,17.900299 L83.4242276,17.900299 Z M56.5390105,17.8998212 L56.5390105,21.929823 L43.4913301,21.929823 L43.4913301,17.8998212 L56.5390105,17.8998212 Z M147.891434,17.8846262 L147.891434,21.9155837 L124.936556,21.9155837 L126.307529,17.8846262 L147.891434,17.8846262 Z M117.266988,17.8844351 L118.638898,21.9153926 L95.6840208,21.9153926 L95.6840208,17.8844351 L117.266988,17.8844351 Z M30.4436498,9.43844199 L30.4436498,13.4684438 L-2.91322522e-13,13.4684438 L-2.91322522e-13,9.43844199 L30.4436498,9.43844199 Z M81.197476,9.43844199 C81.8186099,10.5338628 82.324153,11.7053777 82.6946307,12.9369814 L82.8450809,13.4684438 L34.793533,13.4684438 L34.793533,9.43844199 L81.197476,9.43844199 Z M156.593451,9.41971113 L156.593451,13.4506686 L127.817099,13.4506686 L129.189946,9.41971113 L156.593451,9.41971113 Z M114.385696,9.41999783 L115.757606,13.4509553 L86.9821914,13.4509553 L86.9821914,9.41999783 L114.385696,9.41999783 Z M30.4436498,0.978018462 L30.4436498,5.00706462 L-2.91322522e-13,5.00706462 L-2.91322522e-13,0.978018462 L30.4436498,0.978018462 Z M66.818302,0.977540633 C70.7785294,0.977540633 74.4118131,2.3931571 77.2657493,4.75043913 L77.5685254,5.00658679 L34.7936268,5.00658679 L34.7936268,0.977540633 L66.818302,0.977540633 Z M156.592607,0.956229502 L156.592607,4.98718697 L130.69886,4.98718697 L132.07077,0.956229502 L156.592607,0.956229502 Z M111.495495,0.955273846 L112.867405,4.98527566 L86.9820976,4.98527566 L86.9820976,0.955273846 L111.495495,0.955273846 Z"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </section>
          </footer>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots HorizontalRule Default 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="storybook-readme-story"
    >
      <div
        style={Object {}}
      >
        <div>
          <div>
            <h1>
              <b>
                Grid with no Gutter
              </b>
            </h1>
            <div
              className="bx--grid"
              style={
                Object {
                  "marginBottom": "50px",
                }
              }
            >
              <div
                className="bx--row bx--no-gutter"
              >
                <div
                  className="bx--col"
                >
                  <hr
                    className="bx--hr"
                    data-autoid="dds--hr"
                  />
                </div>
              </div>
            </div>
            <h1>
              <b>
                Grid with Gutter
              </b>
            </h1>
            <div
              className="bx--grid bx--grid--full-width"
            >
              <div
                className="bx--row"
              >
                <div
                  className="bx--col"
                >
                  <h4>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                  </h4>
                  <hr
                    className="bx--hr"
                    data-autoid="dds--hr"
                  />
                  <h4>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                  </h4>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots Masthead Default 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="storybook-readme-story"
    >
      <div
        style={Object {}}
      >
        <div>
          <div
            className="bx--masthead "
          >
            <div
              className="bx--masthead__l0"
            >
              <header
                aria-label="IBM"
                className="bx--header"
                data-autoid="dds--masthead"
                role="banner"
              >
                <a
                  className="bx--skip-to-content"
                  href="#main-content"
                  tabIndex="0"
                >
                  Skip to main content
                </a>
                <button
                  aria-label="Open menu"
                  className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
                  data-autoid="dds--masthead__hamburger"
                  onClick={[Function]}
                  title="Open menu"
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 20 20"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 14.8h16V16H2zm0-3.6h16v1.2H2zm0-3.6h16v1.2H2zM2 4h16v1.2H2z"
                    />
                  </svg>
                </button>
                <div
                  className="bx--header__logo"
                  data-autoid="dds--masthead-logo"
                >
                  <a
                    data-autoid="dds--masthead-logo__link"
                    href="https://www.ibm.com/"
                  >
                    <svg
                      height={23}
                      width={54}
                    >
                      <path
                        d="M0 22.082v-1.386h10.471v1.386H0zm0-2.909v-1.385h10.471v1.385H0zm2.992-2.908v-1.386h4.487v1.386H2.992zm0-2.91v-1.384h4.487v1.385H2.992zm0-2.908V9.062h4.487v1.385H2.992zm0-2.908V6.153h4.487V7.54H2.992zM0 4.629V3.245h10.471V4.63H0zm0-2.908V.336h10.471v1.385H0zm11.967 16.067h16.527c-.13.49-.322.955-.566 1.385h-15.96v-1.385zm2.992-1.523v-1.386h4.488v1.386h-4.488zM26.78 11.97c.432.402.803.868 1.098 1.386h-12.92V11.97H26.78zM14.96 9.062h12.968a5.836 5.836 0 01-1.097 1.385H14.959V9.062zM28.494 4.63H11.967V3.244h15.96c.245.43.437.895.567 1.386zM26.68 1.72H11.967V.336h11.015c1.41 0 2.701.522 3.698 1.385zM14.959 7.538V6.153h4.488v1.385h-4.488zm8.703 0V6.154h5.032c0 .478-.06.941-.167 1.386h-4.865zm0 7.341h4.865c.107.445.167.908.167 1.386h-5.032v-1.386zM38.35.33l.472 1.385h-8.904V.328h8.432zm-8.431 21.753v-1.386h7.481v1.386h-7.481zm0-2.91v-1.386h7.481v1.386h-7.481zm2.992-2.91v-1.385h4.49v1.385h-4.49zm0-2.91v-1.385h4.49v1.386h-4.49zm13.468 8.73v-1.386h7.482v1.386h-7.482zm0-2.91v-1.386h7.482v1.386h-7.482zm0-2.91v-1.385h4.49v1.385h-4.49zm0-2.91v-1.385h4.49v1.386h-4.49zm0-2.909v-1.32l-.458 1.32h-3.94l.473-1.386h8.415v1.386h-4.49zm-5.053-1.385l.472 1.385h-3.94l-.458-1.32v1.32H32.91V9.058h8.415zm9.542-2.91v1.385h-7.895l.471-1.385h7.424zM45.426.328h8.434v1.386h-8.906L45.426.33zm-3.54 21.754l-.475-1.386h.956l-.481 1.386zm-1.003-2.91l-.48-1.386h2.972l-.48 1.386h-2.012zm-1.009-2.91l-.48-1.385h4.99l-.48 1.385h-4.03zm-1.008-2.91l-.48-1.385h7.006l-.48 1.386h-6.046zM32.91 7.534V6.148h7.424l.472 1.385H32.91zm11.053-2.91l.472-1.385h9.425v1.386h-9.897zm-4.62-1.385l.472 1.386h-9.898V3.238h9.426zM11.967 20.696H26.68a5.627 5.627 0 01-3.698 1.386H11.967v-1.386z"
                        fill="#000"
                        fillRule="evenodd"
                      />
                    </svg>
                  </a>
                </div>
                <div
                  className="bx--header__search "
                >
                  <nav
                    aria-label="IBM"
                    className="bx--header__nav"
                    data-autoid="dds--masthead__l0-nav"
                  >
                    <ul
                      aria-label="IBM"
                      className="bx--header__menu-bar"
                      role="menubar"
                    />
                  </nav>
                  <div
                    className="bx--masthead__search"
                    data-autoid="dds--masthead__search"
                    onBlur={[Function]}
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-owns="react-autowhatever-1"
                      className="react-autosuggest__container"
                      role="combobox"
                    >
                      <input
                        aria-activedescendant={null}
                        aria-autocomplete="list"
                        aria-controls="react-autowhatever-1"
                        autoComplete="off"
                        className="bx--header__search--input"
                        data-autoid="dds--header__search--input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Search all of IBM"
                        type="text"
                        value=""
                      />
                      <button
                        aria-label="Search all of IBM"
                        className="bx--header__search--search bx--header__action"
                        data-autoid="dds--header__search--search"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          focusable="false"
                          height={20}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 32 32"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M30 28.59L22.45 21A11 11 0 1 0 21 22.45L28.59 30zM5 14a9 9 0 1 1 9 9 9 9 0 0 1-9-9z"
                          />
                        </svg>
                      </button>
                      <button
                        aria-label="Close"
                        className="bx--header__search--close bx--header__action"
                        data-autoid="dds--header__search--close"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          focusable="false"
                          height={20}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 32 32"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                          />
                        </svg>
                      </button>
                      <div
                        className="react-autosuggest__suggestions-container"
                        id="react-autowhatever-1"
                        role="listbox"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="bx--header__global"
                >
                  <button
                    aria-label="User Profile"
                    className="bx--header__action"
                    data-autoid="dds--masthead__profile"
                    onClick={[Function]}
                    type="button"
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-label="Menu"
                      className="bx--overflow-menu"
                      onClick={[Function]}
                      onClose={[Function]}
                      onKeyDown={[Function]}
                      open={false}
                      role="button"
                      style={
                        Object {
                          "width": "auto",
                        }
                      }
                      tabIndex={0}
                    >
                      <svg
                        aria-hidden={true}
                        focusable="false"
                        height={20}
                        preserveAspectRatio="xMidYMid meet"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 32 32"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 4a5 5 0 1 1-5 5 5 5 0 0 1 5-5m0-2a7 7 0 1 0 7 7 7 7 0 0 0-7-7zm10 28h-2v-5a5 5 0 0 0-5-5h-6a5 5 0 0 0-5 5v5H6v-5a7 7 0 0 1 7-7h6a7 7 0 0 1 7 7z"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
                <div
                  className="bx--side-nav__overlay"
                />
                <nav
                  aria-label="Side navigation"
                  className="bx--side-nav__navigation bx--side-nav bx--side-nav--ux bx--side-nav--hidden"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <nav
                    data-autoid="dds--masthead__l0-sidenav"
                  >
                    <ul
                      className="bx--side-nav__items"
                    >
                      <div
                        className="bx--side-nav__header-navigation"
                      />
                    </ul>
                  </nav>
                </nav>
              </header>
            </div>
            <div>
              <div
                className="bx--masthead__l1"
              >
                <div
                  className="bx--masthead__l1-name"
                >
                  <span
                    className="bx--masthead__l1-name-eyebrow"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.7 12.3L2.9 8.5H15v-1H2.9l3.8-3.8L6 3 1 8l5 5z"
                      />
                    </svg>
                    <a
                      href="#"
                    >
                      Eyebrow
                    </a>
                  </span>
                  <span
                    className="bx--masthead__l1-name-title"
                  >
                    Stock Charts
                  </span>
                </div>
                <nav
                  aria-label=""
                  className="bx--header__nav bx--masthead__l1-nav"
                >
                  <ul
                    aria-label=""
                    className="bx--header__menu-bar"
                    role="menubar"
                  >
                    <li>
                      <a
                        className="bx--header__menu-item"
                        href="#"
                        role="menuitem"
                        tabIndex={0}
                      >
                        <span
                          className="bx--text-truncate--end"
                        >
                          Link 1
                        </span>
                      </a>
                    </li>
                    <li>
                      <a
                        className="bx--header__menu-item"
                        href="#"
                        role="menuitem"
                        tabIndex={0}
                      >
                        <span
                          className="bx--text-truncate--end"
                        >
                          Link 2
                        </span>
                      </a>
                    </li>
                    <li>
                      <a
                        className="bx--header__menu-item"
                        href="#"
                        role="menuitem"
                        tabIndex={0}
                      >
                        <span
                          className="bx--text-truncate--end"
                        >
                          Link 3
                        </span>
                      </a>
                    </li>
                    <li
                      className="bx--header__submenu"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-expanded={false}
                        aria-haspopup="menu"
                        aria-label="Link 4"
                        className="bx--header__menu-item bx--header__menu-title"
                        href="javascript:void(0)"
                        onKeyDown={[Function]}
                        role="menuitem"
                        tabIndex={0}
                      >
                        Link 4
                        <svg
                          aria-hidden={true}
                          className="bx--header__menu-arrow"
                          focusable="false"
                          height={6}
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 10 6"
                          width={10}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5 6L0 1 .7.3 5 4.6 9.3.3l.7.7z"
                          />
                        </svg>
                      </a>
                      <ul
                        aria-label="Link 4"
                        className="bx--header__menu"
                        role="menu"
                      >
                        <li
                          role="none"
                        >
                          <a
                            className="bx--header__menu-item"
                            href="#"
                            role="menuitem"
                            tabIndex={0}
                          >
                            <span
                              className="bx--text-truncate--end"
                            >
                              Sub-link 1
                            </span>
                          </a>
                        </li>
                        <li
                          role="none"
                        >
                          <a
                            className="bx--header__menu-item"
                            href="#"
                            role="menuitem"
                            tabIndex={0}
                          >
                            <span
                              className="bx--text-truncate--end"
                            >
                              Sub-link 2
                            </span>
                          </a>
                        </li>
                        <li
                          role="none"
                        >
                          <a
                            className="bx--header__menu-item"
                            href="#"
                            role="menuitem"
                            tabIndex={0}
                          >
                            <span
                              className="bx--text-truncate--end"
                            >
                              Sub-link 3
                            </span>
                          </a>
                        </li>
                      </ul>
                    </li>
                  </ul>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;
